--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.0",
     "@mui/material": "^5.3.0",
+    "@tensorflow/tfjs-node": "^3.13.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "canvas": "^2.9.0",
     "face-api.js": "^0.22.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
