--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build --alow-root",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
