--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.0",
     "@mui/material": "^5.3.0",
-    "@tensorflow-models/facemesh": "^0.0.5",
-    "@tensorflow/tfjs": "^3.16.0",
-    "@tensorflow/tfjs-node": "^3.13.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -27,7 +24,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build --alow-root",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
