--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -18,7 +18,7 @@
     }
   },
   "auth": {
-    "calor950c8aa6": {
+    "calor69e91bd5": {
       "service": "Cognito",
       "providerPlugin": "awscloudformation",
       "dependsOn": [],
