--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "^2.15.5",
+    "@date-io/date-fns": "^2.13.1",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.2",
+    "@mui/x-data-grid": "^5.10.0",
+    "@mui/x-data-grid-generator": "^5.10.0",
+    "@mui/x-date-pickers": "^5.0.0-alpha.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^4.3.20",
+    "date-fns": "^2.28.0",
     "face-api.js": "^0.22.2",
     "formik": "^2.2.9",
     "react": "^17.0.2",
