WIP for patient sending vidoe to AWS

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -59,5 +59,29 @@
         ]
       }
     }
+  },
+  "function": {
+    "S3Trigger9b09e867": {
+      "service": "Lambda",
+      "providerPlugin": "awscloudformation",
+      "build": true
+    }
+  },
+  "storage": {
+    "videoStorage": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": [
+        {
+          "category": "function",
+          "resourceName": "S3Trigger9b09e867",
+          "attributes": [
+            "Name",
+            "Arn",
+            "LambdaExecutionRole"
+          ]
+        }
+      ]
+    }
   }
 }
