--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "^2.15.5",
+    "@aws-sdk/client-s3": "^3.85.0",
     "@date-io/date-fns": "^2.13.1",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
@@ -16,9 +17,11 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^4.3.20",
+    "aws-sdk": "^2.1129.0",
     "date-fns": "^2.28.0",
     "face-api.js": "^0.22.2",
     "formik": "^2.2.9",
+    "microphone-stream": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-media-recorder": "^1.6.4",
