--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^4.3.20",
     "aws-sdk": "^2.1129.0",
+    "buffer": "^6.0.3",
     "date-fns": "^2.28.0",
     "face-api.js": "^0.22.2",
     "formik": "^2.2.9",
@@ -27,6 +28,7 @@
     "react-media-recorder": "^1.6.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-speech-recognition": "^3.9.0",
     "react-webcam": "^7.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
