--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "ag-charts-react": "^5.2.0",
     "aws-amplify": "^4.3.20",
     "aws-sdk": "^2.1129.0",
     "buffer": "^6.0.3",
+    "canvasjs": "^1.8.3",
     "date-fns": "^2.28.0",
     "face-api.js": "^0.22.2",
     "formik": "^2.2.9",
@@ -26,10 +28,14 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-media-recorder": "^1.6.4",
+    "react-minimal-pie-chart": "^8.3.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-speech-recognition": "^3.9.0",
     "react-webcam": "^7.0.1",
+    "recharts": "^2.1.9",
+    "victory": "^36.3.2",
+    "victory-pie": "^36.3.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
